[package]
name = "ow-unity-converter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
progress = "0.2.0"
image = "0.24.4"
num = "0.4.0"
nfd = { git ="https://github.com/saurvs/nfd-rs.git" }

[workspace]